# three_comp_hyd

./: LICENSE  README.md  evolutionary_fitting.py  grid_search_evolutionary_parameters.py  interactive_simulation.py  model_behaviour_plots.py  pygmo_fittings_report.py  requirements.txt  setup.cfg  setup.py  three_comp_config.py
agents/: hydraulic_agent_basis.py  three_comp_hyd_agent.py  two_comp_hyd_agent.py
animate/: base_animation.py  interactive_animation.py  three_comp_interactive_animation.py
data_structure/: constant_effort_measures.py
evolutionary_fitter/: pygmo_three_comp_fitter.py  three_comp_tools.py
example_scripts/: 2tm_interactive_simulation.py  3tm_interactive_simulation.py  evolutionary_fitting.py  grid_search_evolutionary_parameters.py  interactive_simulation.py  investigate_three_comp_fitness_function.py  model_behaviour_plots.py  plot_three_comp_overview.py  pygmo_fittings_report.py
handler/: pygmo_fitting_report_creator.py
simulate/: three_comp_hyd_simulator.py
simulation/: three_comp_hyd_simulator.py
tests/: comparison_tests.py  configurations.py  phase_fAe.py  phase_fAe_fAn.py  phase_fAe_lAn.py  phase_fAe_rAn.py  phase_lAe.py  phase_lAe_fAn.py  phase_lAe_lAn.py  phase_lAe_rAn.py  phase_rAn.py  rec_a1_trial.py  rec_a2_trial.py  rec_a3_r1_trial.py  rec_a3_r2_trial.py  rec_a4_r1_trial.py  rec_a4_r2_trial.py  rec_a4_trial.py  rec_a5_trial.py  rec_a6_trial.py  rec_fAe_trial.py  rec_phase_tests.py  rec_trial_tests.py  tte_phase_tests.py
threecomphyd/: config.py
visualise/: morton_three_comp_visualisation.py  three_comp_visualisation.py
(+51 files in other folders)
