[metadata]
name = threecomphyd
version = 0.1.0
author = Fabian Weigend
author_email = fabian.weigend@westernsydney.edu.au
description = Implementation of the generalized Three Component Hydraulic Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faweigend/three_comp_hyd
project_urls =
    Bug Tracker = https://github.com/faweigend/three_comp_hyd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pygmo
    matplotlib

[options.packages.find]
where = src